# man-i-love-baseball

./: CMakeLists.txt  README.md  graph_functions.cpp  graph_functions.h  mainwindow.cpp  mainwindow.cpp.autosave  mainwindow.h  mainwindow.ui  project2.pro  project2.pro.user.4f28523  project2.pro.user.daaac82
docs/: PROJECT_INSTRUCTIONS.md
forms/: mainwindow.ui
resources/: resources.qrc
resources/data/: merch.json  stadiums.json
sprint2Check/: mainwindow.h  mainwindow.ui
src/core/: merch.cpp  merch.h  stadium.cpp  stadium.h
src/ui/: clickableellipse.h  mainwindow.cpp  mainwindow.h  map.cpp  map.h
src/utils/: stadiumhelper.cpp  stadiumhelper.h
version1/: mainwindow.cpp  project2.pro.user.daaac82  resources.qrc
version3/: clickableellipseitem.h  graphs.cpp  graphs.h  mainwindow.cpp  mainwindow.h  project2.pro
version4/: dijkprimkrus.cpp  dijkprimkrus.h  graphs.cpp  graphs.h  graphutils.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  project2.pro  stadiums.txt
